--- a/index.html
+++ b/index.html
@@ -3,10 +3,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="stayle.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>grid-dom-slider</title>
   </head>
   <body>
+    <div class="wrapper">
+        <h1 class="h1"></h1>
+      <header class="header">
+        <div>
+          <img class="logo"></img>
+        </div>       
+        <nav>
+          <ul>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Проекты</a></li>
+            <li><a href="#">О компании</a></li>
+            <li><a href="#">Контакты</a></li>            
+        </ul>
+      </nav>
+      <div>
+        <img src="" alt="search">
+        <img src="" alt="menu">
+      </div>       
+      </header>
+      <main class="main">
+        <div>
+          <h4>ЭЛЕКТРОНИКА</h4>
+        </div>
+        <div>
+          <h4>КОМПЬЮТЕРЫ И СЕТИ</h4>
+        </div>
+        <div>
+          <h4>ДОМ И САД</h4>
+        </div>
+        <div>
+          <h4>СТРОЙКА И РЕМОНТ</h4>
+        </div>
+        <div>
+          <h4>ДОМ И САД</h4>
+        </div>
+        <div>
+          <h4>АВТО И МОТО</h4>
+        </div>
+      </main>
+      <footer class="footer">
+        <div><p>Каталог © </p></div>
+        <div></div>
+        <div><p>Разработка сайта</p></div>
+      </footer>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
