--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="wrapper">
-        <h1 class="h1"></h1>
+        <!-- <h1 class="h1"></h1> -->
       <header class="header">
         <div>
           <img class="logo"></img>
