--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <!-- <h1 class="h1"></h1> -->
       <header class="header">
         <div>
-          <img class="logo"></img>
+          <img class="logo" src="assets/img/Logo.png" alt="logo"></img>          
         </div>       
-        <nav>
+        <nav class="header-navigation">
           <ul>
             <li><a href="#">Главная</a></li>
             <li><a href="#">Каталог</a></li>
@@ -23,8 +23,8 @@
         </ul>
       </nav>
       <div>
-        <img src="" alt="search">
-        <img src="" alt="menu">
+        <img src="assets/img/search.png" alt="search">
+        <img src="assets/img/menu.png" alt="menu">
       </div>       
       </header>
       <main class="main">
