fix: fix header

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <!-- <h1 class="h1"></h1> -->
       <header class="header">
         <div>
-          <img class="logo" src="assets/img/Logo.png" alt="logo"></img>          
+          <img class="header_logo" src="assets/img/Logo.png" alt="logo"></img>          
         </div>       
-        <nav class="header-navigation">
+        <nav class="header_navigation">
           <ul>
             <li><a href="#">Главная</a></li>
             <li><a href="#">Каталог</a></li>
@@ -22,9 +22,9 @@
             <li><a href="#">Контакты</a></li>            
         </ul>
       </nav>
-      <div>
-        <img src="assets/img/search.png" alt="search">
+      <div class="header_search-menu">        
         <img src="assets/img/menu.png" alt="menu">
+        <img src="assets/img/search.png" alt="search">
       </div>       
       </header>
       <main class="main">
