feat: add style main size

--- a/index.html
+++ b/index.html
@@ -8,47 +8,47 @@
   </head>
   <body>
     <div class="wrapper">
-        <!-- <h1 class="h1"></h1> -->
+      <!-- <h1 class="h1"></h1> -->
       <header class="header">
         <div>
-          <img class="header_logo" src="assets/img/Logo.png" alt="logo"></img>          
-        </div>       
+          <img class="header_logo" src="assets/img/Logo.png" alt="logo" />
+        </div>
         <nav class="header_navigation">
           <ul>
             <li><a href="#">Главная</a></li>
             <li><a href="#">Каталог</a></li>
             <li><a href="#">Проекты</a></li>
             <li><a href="#">О компании</a></li>
-            <li><a href="#">Контакты</a></li>            
-        </ul>
-      </nav>
-      <div class="header_search-menu">        
-        <img src="assets/img/menu.png" alt="menu">
-        <img src="assets/img/search.png" alt="search">
-      </div>       
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="header_search-menu">
+          <img src="assets/img/menu.png" alt="menu" />
+          <img src="assets/img/search.png" alt="search" />
+        </div>
       </header>
       <main class="main">
         <div>
-          <h4>ЭЛЕКТРОНИКА</h4>
+          <h3>ЭЛЕКТРОНИКА</h3>
         </div>
         <div>
-          <h4>КОМПЬЮТЕРЫ И СЕТИ</h4>
+          <h3>КОМПЬЮТЕРЫ И СЕТИ</h3>
         </div>
         <div>
-          <h4>ДОМ И САД</h4>
+          <h3>ДОМ И САД</h3>
         </div>
         <div>
-          <h4>СТРОЙКА И РЕМОНТ</h4>
+          <h3>СТРОЙКА И РЕМОНТ</h3>
         </div>
         <div>
-          <h4>ДОМ И САД</h4>
+          <h3>ДОМ И САД</h3>
         </div>
         <div>
-          <h4>АВТО И МОТО</h4>
+          <h3>АВТО И МОТО</h3>
         </div>
       </main>
       <footer class="footer">
-        <div><p>Каталог © </p></div>
+        <div><p>Каталог ©</p></div>
         <div></div>
         <div><p>Разработка сайта</p></div>
       </footer>
