feat: add tablet style

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h3>КОМПЬЮТЕРЫ И СЕТИ</h3>
         </div>
         <div>
-          <h3>ДОМ И САД</h3>
+          <h3>БЫТОВАЯ ТЕХНИКА</h3>
         </div>
         <div>
           <h3>СТРОЙКА И РЕМОНТ</h3>
