--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
           <img src="assets/img/menu.png" alt="menu" />
           <img src="assets/img/search.png" alt="search" />
         </div>
+        <div class="header_mobile">
+          <img src="assets/img/menu.png" alt="menu" />
+          <img src="assets/img/search.png" alt="search" />
+          <img src="assets/img/Logo.png" alt="logo" />
+        </div>
       </header>
       <main class="main">
         <div>
