feat: add mobile style

--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
       </main>
       <footer class="footer">
         <div><p>Каталог ©</p></div>
-        <div></div>
+        <div class="footer-mobile">
+          <div>
+            <p><a href="#">НАВЕРХ</a></p>
+          </div>
+          <div>
+            <p>Каталог ©</p>
+            <p>Разработка сайта</p>
+          </div>
+        </div>
         <div><p>Разработка сайта</p></div>
       </footer>
     </div>
