--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>grid-dom-slider</title>
   </head>
   <body>
+    <h1 class="h1"></h1>
     <div class="wrapper">
-      <!-- <h1 class="h1"></h1> -->
       <header class="header">
         <div>
           <img class="header_logo" src="assets/img/Logo.png" alt="logo" />
