feat: add html and style for containar a menu

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <h1 class="h1"></h1>
     <div class="wrapper">
+      <div class="menu">
+        <h2>There will be a menu</h2>
+        <button id="closeMenu" class="menu_close-menu">close</button>
+      </div>
       <header class="header">
         <div>
           <img class="header_logo" src="assets/img/Logo.png" alt="logo" />
