feat: add html and css for search-container

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <h2>There will be a menu</h2>
         <button id="closeMenu" class="close-menu">close</button>
       </div>
+      <div id="search" class="search-container">
+        <h2>There will be a search</h2>
+        <button id="closeSearch" class="close-search">close</button>
+      </div>
       <header class="header">
         <div>
           <img class="header_logo" src="assets/img/Logo.png" alt="logo" />
