--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             src="assets/img/menu.png"
             alt="menu"
           />
-          <img src="assets/img/search.png" alt="search" />
+          <img id="startSearch" src="assets/img/search.png" alt="search" />
         </div>
         <div class="header_mobile">
           <img src="assets/img/menu.png" alt="menu" />
