feat: add input in search

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div id="search" class="search-container">
         <h2>There will be a search</h2>
         <button id="closeSearch" class="close-search">close</button>
+        <input type="text" />
       </div>
       <header class="header">
         <div>
