feat: add input in menu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div id="menu" class="menu-container">
         <h2>There will be a menu</h2>
         <button id="closeMenu" class="close-menu">close</button>
+        <input type="text" />
       </div>
       <div id="search" class="search-container">
         <h2>There will be a search</h2>
