feat: add button in search

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h2>There will be a search</h2>
         <button id="closeSearch" class="close-search">close</button>
         <input type="text" />
+        <button id="searchButton" class="search-button"></button>
       </div>
       <header class="header">
         <div>
