--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <button id="closeSearch" class="close-search">close</button>
         <input type="text" />
         <button id="searchButton" class="search-button"></button>
+        <div class="search-text"></div>
       </div>
       <header class="header">
         <div>
